--- a/battleunits.html
+++ b/battleunits.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="">
+	<meta name="description" content="List of battle units">
 	<meta name="author" content="">
 	<title>Battle Units</title>
 	<!-- Favicons -->
@@ -101,42 +101,7 @@
 						<td>5★</td>
 						<td>Physical</td>
 					</tr>
-					<tr>
-						<td><a href="battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest"><img src="images/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Harmonizer of Monsters and Humans Rimuru Tempest</a></td>
-						<td>Water</td>
-						<td>5★</td>
-						<td>Magical</td>
-					</tr>
-					<tr>
-						<td><a href="battleunits/budding_of_deep_green_treyni"><img src="images/battleunits/budding_of_deep_green_treyni/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Budding of Deep Green Treyni</a></td>
-						<td>Earth</td>
-						<td>5★</td>
-						<td>Magical</td>
-					</tr>
-					<tr>
-						<td><a href="battleunits/conqueror_of_flames_shizue_izawa"><img src="images/battleunits/conqueror_of_flames_shizue_izawa/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Conqueror of Flames Shizue Izawa</a></td>
-						<td>Fire</td>
-						<td>5★</td>
-						<td>Physical</td>
-					</tr>
-					<tr>
-						<td><a href="battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest"><img src="images/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Harmonizer of Monsters and Humans Rimuru Tempest</a></td>
-						<td>Water</td>
-						<td>5★</td>
-						<td>Magical</td>
-					</tr>
-					<tr>
-						<td><a href="battleunits/budding_of_deep_green_treyni"><img src="images/battleunits/budding_of_deep_green_treyni/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Budding of Deep Green Treyni</a></td>
-						<td>Earth</td>
-						<td>5★</td>
-						<td>Magical</td>
-					</tr>
-					<tr>
-						<td><a href="battleunits/conqueror_of_flames_shizue_izawa"><img src="images/battleunits/conqueror_of_flames_shizue_izawa/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Conqueror of Flames Shizue Izawa</a></td>
-						<td>Fire</td>
-						<td>5★</td>
-						<td>Physical</td>
-					</tr>
+					
 				</tbody>
 			</table>
 			
@@ -147,7 +112,7 @@
 	<!-- /.container -->
 	<!-- Footer -->
 	<footer class="py-1 bg-dark">
-		<p class="m-0 text-center text-white">GCDatabase is not affliated with or endorsed by Netmarble | <a href="https://www.paypal.me/gcdatabase" style="color: #ff5500" target="_blank">Donations</a> | <a href="https://gcdatabase.com/specialthanks" style="color: #fcba03" target="_blank">Special Thanks</a></p>
+		<p class="m-0 text-center text-white">Isekai Memories Database is not affliated with or endorsed by Bandai Namco</a></p>
 	</footer>
 	<!-- Bootstrap core JavaScript -->
 	<script src="../lib/bootstrap/js/bootstrap.min.js"></script>
