--- a/protectorunits.html
+++ b/protectorunits.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="">
+	<meta name="description" content="List of protector units">
 	<meta name="author" content="">
 	<title>Protection Units</title>
 	<!-- Favicons -->
@@ -112,7 +112,7 @@
 	<!-- /.container -->
 	<!-- Footer -->
 	<footer class="py-1 bg-dark">
-		<p class="m-0 text-center text-white">GCDatabase is not affliated with or endorsed by Netmarble | <a href="https://www.paypal.me/gcdatabase" style="color: #ff5500" target="_blank">Donations</a> | <a href="https://gcdatabase.com/specialthanks" style="color: #fcba03" target="_blank">Special Thanks</a></p>
+		<p class="m-0 text-center text-white">Isekai Memories Database is not affliated with or endorsed by Bandai Namco</a></p>
 	</footer>
 	<!-- Bootstrap core JavaScript -->
 	<script src="../lib/bootstrap/js/bootstrap.min.js"></script>
