--- a/navigation.html
+++ b/navigation.html
@@ -22,6 +22,7 @@
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
                         <a class="dropdown-item whitetext" href="soulconverters">Soul Converters</a>
                         <a class="dropdown-item whitetext" href="protectoroverivew">Protector Overview</a>
+                        <a class="dropdown-item whitetext" href="food">Food</a>
                     </div>
                 </li>
             </ul>
