--- a/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest.html
+++ b/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest.html
@@ -24,7 +24,7 @@
 			<div class="mt-3 mb-3 titlebox col-lg-2 col-12 text-center">
 				<img src="../images/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest/portrait.png" class="pr-4 ml-1 ml-lg-3" loading="lazy">
 			</div>
-			<div class="col-lg-6 my-auto ml-4 ml-lg-n4">
+			<div class="col-lg-6 my-auto text-center text-lg-left charname">
 				<h5 class="whitetext"><b>&#91;Harmonizer of Monsters and Humans&#93;</b></h5><h5 class="whitetext"><b>Rimuru Tempest</b></h5>
 			</div>
 		</div>
@@ -68,42 +68,45 @@
 			</div>
 			<!-- /. End of Left Sidebar -->
 			<div class="col-lg-6 mb-4 mt-2 mt-lg-0 mx-lg-0 bg-dark rounded" style="margin-left: 15px; margin-right: 15px;">
-				<h2 class="whitetext border-bottom pb-2 mt-2"><b style="margin-left: -2px">Battle Skills (Lv.1)</b></h2>
+				<h2 class="whitetext border-bottom pb-2 mt-2"><b style="margin-left: -2px">Battle Skills</b></h2>
 				<div class="whitetext">
 					<div class="pl-2 pl-lg-0" style="margin-top: 13px">
 						<div class="row m-0">
 							<div class="col-12 col-lg-3 text-center my-auto p-0">
-								<img src="../images/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest/skill1.png" loading="lazy">
+								<img src="../images/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest/skill1.png" class="charskill" loading="lazy">
 							</div>
 							<div class="col-lg-9 my-auto px-lg-0 px-2">
-								<h5 class="mt-2"><b>Skill 1: Hydro Combat</b></h5>
+								<h5 class="mt-2"><b>Skill 1: Hydro Combat (50/45/40)</b></h5>
 								<p>Decreases a single target's Secret Skill Gauge by <span style="color:#03DD08">5%</span>.</p>
+								<p>Multiplier: <span style="color: #9C9C9C;">5/5.5/6</span><span style="color: #C6A656;">/7/7.5/8/</span><span style="color: #BC7BEF;">9/11/13/15</span>%</p>
 							</div>
 						</div>
 					</div>
 					<div class="pl-2 pl-lg-0" style="margin-top: 13px">
 						<div class="row m-0">
 							<div class="col-12 col-lg-3 text-center my-auto p-0">
-								<img src="../images/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest/skill2.png" loading="lazy">
+								<img src="../images/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest/skill2.png" class="charskill" loading="lazy">
 							</div>
 							<div class="col-lg-9 my-auto px-lg-0 px-2">
-								<h5 class="mt-2"><b>Skill 2: Heal Assist</b></h5>
-								<p>Heals all allies' HP by <span style="color:#03DD08">15%</span>.<br>Increases <a data-toggle="popover-hover" data-img="../images/icons/soul_of_divine_protection.png"><span style="color:#3A8AFF">Soul of Divine Protection</span></a> damage until the end of battle by <span style="color:#03DD08">5%</span> (Max: <span style="color:#03DD08">100%</span>).</p>
+								<h5 class="mt-2"><b>Skill 2: Heal Assist (40/35/30)</b></h5>
+								<p >Heals all allies' HP by <span style="color:#03DD08">15%</span>.<br>Increases <a data-toggle="popover-hover" data-img="../images/icons/soul_of_divine_protection.png"><span style="color:#3A8AFF">Soul of Divine Protection</span></a> damage until the end of battle by <span style="color:#03DD08">5%</span> (Max: <span style="color:#03DD08">100%</span>).</p>
+								<p>Multiplier: <span style="color: #9C9C9C;">15/15.5/16</span><span style="color: #C6A656;">/16/16.5/17/</span><span style="color: #BC7BEF;">17/18/19/20</span>%</p>
 							</div>
 						</div>
 					</div>
 				</div>
-				<h2 class="whitetext border-bottom" style="border-bottom-color: #1D2430;"><b>Secret Skill (Lv.MAX)</b></h2>
+				<h2 class="whitetext border-bottom pb-2" style="border-bottom-color: #1D2430;"><b>Secret Skill (Lv.MAX)</b></h2>
 				<div class="row m-0 whitetext mb-3">
 					<div class="col-12 col-lg-3 text-center my-auto p-0">
-						<img src="../images/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest/ult.png" loading="lazy">
+						<img src="../images/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest/ult.png" class="charskill" loading="lazy">
 					</div>
 					<div class="col-lg-9 my-auto px-lg-0 px-2">
 						<h5 class="mt-2"><b>Black Lightning</b></h5>
-						<p class="mb-0">Unleashes an all-target water magic attack for <span style="color:#03DD08">270%</span> normal damage.</p>
+						<p>Unleashes an all-target water magic attack for <span style="color:#03DD08">270%</span> normal damage.</p>
+						<p>Multiplier: 230/235/240/245/250/270%</p>
 					</div>
 				</div>
-				<h2 class="whitetext border-bottom" style="border-bottom-color: #1D2430;"><b>Traits</b></h2>
+				<h2 class="whitetext border-bottom pb-2" style="border-bottom-color: #1D2430;"><b>Traits</b></h2>
 				<div class="whitetext mb-2">
 					<h5 class="mt-2"><b>Effect - DEF UP (5★ Awaken x1)</b></h5>
 					<p>When affected by Critical Resistance UP, increases own DEF by <span style="color:#03DD08">7%</span> at start of turn (available in support formation).</p>
