--- a/battleunits.html
+++ b/battleunits.html
@@ -84,24 +84,59 @@
 				</thead>
 				<tbody>
 					<tr>
-						<td><a href="battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest"><img src="images/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Harmonizer of Monsters and Humans Rimuru Tempest</a></td>
-						<td>Water</td>
+						<td><a href="battleunits/tempest_star_wolf_ranga.html"><img src="images/battleunits/tempest_star_wolf_ranga/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Tempest Star Wolf Ranga</a></td>
+						<td><img src="images/icons/attribute_space.png"><br>Space</td>
 						<td>5★</td>
-						<td>Magical</td>
+						<td>Magic</td>
 					</tr>
 					<tr>
-						<td><a href="battleunits/budding_of_deep_green_treyni"><img src="images/battleunits/budding_of_deep_green_treyni/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Budding of Deep Green Treyni</a></td>
-						<td>Earth</td>
-						<td>5★</td>
-						<td>Magical</td>
-					</tr>
-					<tr>
-						<td><a href="battleunits/conqueror_of_flames_shizue_izawa"><img src="images/battleunits/conqueror_of_flames_shizue_izawa/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Conqueror of Flames Shizue Izawa</a></td>
-						<td>Fire</td>
+						<td><a href="battleunits/chancellor_of_tempest_rimuru_tempest.html"><img src="images/battleunits/chancellor_of_tempest_rimuru_tempest/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Chancellor of Tempest Rimuru Tempest</a></td>
+						<td><img src="images/icons/attribute_space.png"><br>Space</td>
 						<td>5★</td>
 						<td>Physical</td>
 					</tr>
-					
+					<tr>
+						<td><a href="battleunits/manifestation_of_the_dragon_milim_nava.html"><img src="images/battleunits/manifestation_of_the_dragon_milim_nava/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Manifestation of the Dragon Milim Nava</a></td>
+						<td><img src="images/icons/attribute_dark.png"><br>Dark</td>
+						<td>5★</td>
+						<td>Magic</td>
+					</tr>
+					<tr>
+						<td><a href="battleunits/one_of_the_oldest_demon_lords_milim_nava.html"><img src="images/battleunits/one_of_the_oldest_demon_lords_milim_nava/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>One of the Oldest Demon Lords Milim Nava</a></td>
+						<td><img src="images/icons/attribute_dark.png"><br>Dark</td>
+						<td>5★</td>
+						<td>Physical</td>
+					</tr>
+					<tr>
+						<td><a href="battleunits/seal_releaser_veldora_tempest.html"><img src="images/battleunits/seal_releaser_veldora_tempest/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Seal Releaser Veldora Tempest</a></td>
+						<td><img src="images/icons/attribute_dark.png"><br>Dark</td>
+						<td>5★</td>
+						<td>Physical</td>
+					</tr>
+					<tr>
+						<td><a href="battleunits/the_black_progenitor_diablo.html"><img src="images/battleunits/the_black_progenitor_diablo/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>The Black Progenitor Diablo</a></td>
+						<td><img src="images/icons/attribute_dark.png"><br>Dark</td>
+						<td>5★</td>
+						<td>Physical</td>
+					</tr>
+					<tr>
+						<td><a href="battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest"><img src="images/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Harmonizer of Monsters and Humans Rimuru Tempest</a></td>
+						<td><img src="images/icons/attribute_water.png"><br>Water</td>
+						<td>5★</td>
+						<td>Magic</td>
+					</tr>
+					<tr>
+						<td><a href="battleunits/budding_of_deep_green_treyni"><img src="images/battleunits/budding_of_deep_green_treyni/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Budding of Deep Green Treyni</a></td>
+						<td><img src="images/icons/attribute_earth.png"><br>Earth</td>
+						<td>5★</td>
+						<td>Magic</td>
+					</tr>
+					<tr>
+						<td><a href="battleunits/conqueror_of_flames_shizue_izawa"><img src="images/battleunits/conqueror_of_flames_shizue_izawa/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Conqueror of Flames Shizue Izawa</a></td>
+						<td><img src="images/icons/attribute_fire.png"><br>Fire</td>
+						<td>5★</td>
+						<td>Physical</td>
+					</tr>
 				</tbody>
 			</table>
 			
