--- a/battleunits/navigation.html
+++ b/battleunits/navigation.html
@@ -10,7 +10,7 @@
                     <a class="nav-link" href="../index">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="../battleunits">Battle Characters</a>
+                    <a class="nav-link" href="../battleunits">Battle Characters</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../protectorunits">Protection Characters</a>
