--- a/battleunits/conqueror_of_flames_shizue_izawa.html
+++ b/battleunits/conqueror_of_flames_shizue_izawa.html
@@ -22,7 +22,7 @@
 		<!-- Character Name & Icon -->
 		<div class="row">
 			<div class="mt-3 mb-3 titlebox col-lg-2 col-12 text-center">
-				<img src="../images/battleunits/conqueror_of_flames_shizue_izawa/portrait.png" class="pr-4 ml-1 ml-lg-3" loading="lazy">
+				<img src="../images/battleunits/conqueror_of_flames_shizue_izawa/portrait.png" class="pr-4 ml-1 ml-lg-3 portrait" loading="lazy">
 			</div>
 			<div class="col-lg-6 my-auto text-center text-lg-left charname">
 				<h5 class="whitetext"><b>&#91;Conqueror of Flames&#93;</b></h5><h5 class="whitetext"><b>Shizue Izawa</b></h5>
@@ -76,7 +76,7 @@
 								<img src="../images/battleunits/conqueror_of_flames_shizue_izawa/skill1.png" class="charskill" loading="lazy">
 							</div>
 							<div class="col-lg-9 my-auto px-lg-0 px-2">
-								<h5 class="mt-2"><b>Skill 1: Degenerate （35/30/25)</b></h5>
+								<h5 class="mt-2"><b>Skill 1: Degenerate (35/30/25)</b></h5>
 								<p>Changes Soul of Divine Protection x2 into Soul of Secrets.<br>Increases all Soul of Secrets gauges' increase by <span style="color:#03DD08">5%</span> (Turns: 1).</p>
 								<p>Multiplier: <span style="color: #9C9C9C;">5/5.5/6</span><span style="color: #C6A656;">/6/6.5/7/</span><span style="color: #BC7BEF;">7/8/9/10</span>%</p>
 							</div>
@@ -88,31 +88,31 @@
 								<img src="../images/battleunits/conqueror_of_flames_shizue_izawa/skill2.png" class="charskill" loading="lazy">
 							</div>
 							<div class="col-lg-9 my-auto px-lg-0 px-2">
-								<h5 class="mt-2"><b>Skill 2: Homura （35/30/25)</b></h5>
+								<h5 class="mt-2"><b>Skill 2: Homura (35/30/25)</b></h5>
 								<p>Increases all allies' stun evasion rate by <span style="color:#03DD08">90%</span> (Turns: 1).<br>Increases own critical rate by <span style="color:#03DD08">15%</span> (Turns: 1)</p>
 								<p>Multiplier: <span style="color: #9C9C9C;">90/91/92</span><span style="color: #C6A656;">/92/93/94/</span><span style="color: #BC7BEF;">94/96/98/100</span>%</p>
 							</div>
 						</div>
 					</div>
 				</div>
-				<h2 class="whitetext border-bottom pb-2" style="border-bottom-color: #1D2430;"><b>Secret Skill (Lv.MAX)</b></h2>
+				<h2 class="whitetext border-bottom pb-2" style="border-bottom-color: #1D2430;"><b>Secret Skill</b></h2>
 				<div class="row m-0 whitetext">
 					<div class="col-12 col-lg-3 text-center my-auto p-0">
 						<img src="../images/battleunits/conqueror_of_flames_shizue_izawa/ult.png" class="charskill" loading="lazy">
 					</div>
 					<div class="col-lg-9 my-auto px-lg-0 px-2">
 						<h5 class="mt-2"><b>Heat Slasher</b></h5>
-						<p>Unleashes a single-target fire physical attack for <span style="color:#03DD08">450%</span> normal damage.</p>
+						<p>Unleashes a single-target fire physical attack for <span style="color:#03DD08">410%</span> normal damage.</p>
 						<p>Multiplier: 410/415/420/425/430/450%</p>
 					</div>
 				</div>
 				<h2 class="whitetext border-bottom pb-2" style="border-bottom-color: #1D2430;"><b>Traits</b></h2>
 				<div class="whitetext mb-2">
 					<h5 class="mt-2"><b>Soul Combo - Critical Damage UP (5★ Awaken x1)</b></h5>
-					<p>When you unleash a 5+ combo attack with Soul of Secrets, increases own critical damage by <span style="color:#03DD08">6%</span> for the next turn (available in support formation).</p>
+					<p>When you unleash a 5+ combo attack with Soul of Secrets, increases own critical damage by 6% for the next turn (available in support formation).</p>
 					
 					<h5 class="mt-2"><b>Soul Combo - Critical Damage UP (5★ Awaken x3)</b></h5>
-					<p>When you unleash a 5+ combo attack with Soul of Secrets, increases own critical damage by <span style="color:#03DD08">9%</span> for the next turn (available in support formation).</p>
+					<p>When you unleash a 5+ combo attack with Soul of Secrets, increases own critical damage by 9% for the next turn (available in support formation).</p>
 				</div>
 			</div>
 			<!-- Right Sidebar -->
@@ -123,11 +123,11 @@
 						<h2 class="whitetext border-bottom text-center pb-2" style="border-bottom-color: #1D2430; padding-bottom: 3px; margin-top: -5px;"><b>Town Traits</b></h2>
 						<div class="row m-0">
 							<div class="col-12 whitetext text-center mb-2 p-0"><b>Forest Supply Corps Base</b></div>
-							<div class="col-6 text-center"><img src="../images/icons/forest_supply_corps_base.png" loading="lazy"></div>
+							<div class="col-6 text-center"><img class="towntraits" src="../images/icons/forest_supply_corps_base.png" loading="lazy"></div>
 							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="mt-2">+30%</h5></div>
 							
 							<div class="col-12 whitetext text-center mb-2"><b>Cafe</b></div>
-							<div class="col-6 text-center"><img src="../images/icons/cafe.png" loading="lazy"></div>
+							<div class="col-6 text-center"><img class="towntraits" src="../images/icons/cafe.png" loading="lazy"></div>
 							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="mt-2">+10%</h5></div>
 						</div>
 					</div>
