--- a/battleunits/manifestation_of_the_dragon_milim_nava.html
+++ b/battleunits/manifestation_of_the_dragon_milim_nava.html
@@ -22,7 +22,7 @@
 		<!-- Character Name & Icon -->
 		<div class="row">
 			<div class="mt-3 mb-3 titlebox col-lg-2 col-12 text-center">
-				<img src="../images/battleunits/manifestation_of_the_dragon_milim_nava/portrait.png" class="pr-lg-4 pl-lg-1 ml-lg-3" loading="lazy">
+				<img src="../images/battleunits/manifestation_of_the_dragon_milim_nava/portrait.png" class="pr-lg-4 pl-lg-1 ml-lg-3 portrait" loading="lazy">
 			</div>
 			<div class="col-lg-6 my-auto text-center text-lg-left charname">
 				<h5 class="whitetext"><b>&#91;Manifestation of the Dragon&#93;</b></h5><h5 class="whitetext"><b>Milim Nava</b></h5>
@@ -76,9 +76,9 @@
 								<img src="../images/battleunits/manifestation_of_the_dragon_milim_nava/skill1.png" class="charskill" loading="lazy">
 							</div>
 							<div class="col-lg-9 my-auto px-lg-0 px-2">
-								<h5 class="mt-2"><b>Skill 1: Sweet Spirit （35/30/25)</b></h5>
-								<p>Heals all allies' HP by <span style="color:#03DD08">25%</span>.</p>
-								<p>Multiplier: <span style="color: #9C9C9C;">25/25.5/26</span><span style="color: #C6A656;">/26/26.5/27/</span><span style="color: #BC7BEF;">27/28/29/30%</span></p>
+								<h5 class="mt-2"><b>Skill 1: Dragon Orb (35/30/25)</b></h5>
+								<p>Changes <a data-toggle="popover-hover" data-img="../images/icons/soul_of_secret.png"><span style="color:#D68A0A">Soul of Secret</span></a> x2 into <a data-toggle="popover-hover" data-img="../images/icons/soul_of_divine_protection.png"><span style="color:#3A8AFF">Soul of Divine Protection</span></a>.<br>Increases all <a data-toggle="popover-hover" data-img="../images/icons/soul_of_divine_protection.png"><span style="color:#3A8AFF">Soul of Divine Protection</span></a> gauges' increase by <span style="color:#03DD08">5%</span> (Turns: 1).</p>
+								<p>Multiplier: <span style="color: #9C9C9C;">5/5.5/6</span><span style="color: #C6A656;">/6/6.5/7/</span><span style="color: #BC7BEF;">7/8/9/10%</span></p>
 							</div>
 						</div>
 					</div>
@@ -88,31 +88,31 @@
 								<img src="../images/battleunits/manifestation_of_the_dragon_milim_nava/skill2.png" class="charskill" loading="lazy">
 							</div>
 							<div class="col-lg-9 my-auto px-lg-0 px-2">
-								<h5 class="mt-2"><b>Skill 2: Hard Mist （25/20/15)</b></h5>
-								<p>Decreases all targets' pierce power by <span style="color:#03DD08">10%</span> (Turns: 3).</p>
+								<h5 class="mt-2"><b>Skill 2: Dragon Thrash (25/20/15)</b></h5>
+								<p>Increases all allies' critical resistance by <span style="color:#03DD08">40%</span> (Turns: 1).<br>Increases own critical rate by <span style="color:#03DD08">15%</span> (Turns: 1)</p>
 								<p>Multiplier: <span style="color: #9C9C9C;">10/11/12</span><span style="color: #C6A656;">/12/13/14/</span><span style="color: #BC7BEF;">14/16/18/20%</span></p>
 							</div>
 						</div>
 					</div>
 				</div>
-				<h2 class="whitetext border-bottom pb-2" style="border-bottom-color: #1D2430;"><b>Secret Skill (Lv.MAX)</b></h2>
+				<h2 class="whitetext border-bottom pb-2" style="border-bottom-color: #1D2430;"><b>Secret Skill</b></h2>
 				<div class="row m-0 whitetext">
 					<div class="col-12 col-lg-3 text-center my-auto p-0">
 						<img src="../images/battleunits/manifestation_of_the_dragon_milim_nava/ult.png" class="charskill" loading="lazy">
 					</div>
 					<div class="col-lg-9 my-auto px-lg-0 px-2">
-						<h5 class="mt-2"><b>Aerial Blade</b></h5>
-						<p>Unleashes a single-target earth magic attack for <span style="color:#03DD08">450%</span> normal damage.</p>
+						<h5 class="mt-2"><b>Drago-Nova</b></h5>
+						<p>Unleashes a single-target dark magic attack for <span style="color:#03DD08">410%</span> normal damage.</p>
 						<p>Multiplier: 410/415/420/425/430/450%</p>
 					</div>
 				</div>
 				<h2 class="whitetext border-bottom pb-2" style="border-bottom-color: #1D2430;"><b>Traits</b></h2>
 				<div class="whitetext mb-2">
-					<h5 class="mt-2"><b>Effect - DEF UP (5★ Awaken x1)</b></h5>
-					<p>When affected by Pierce Resistance UP, increases own DEF by <span style="color:#03DD08">7%</span> at start of turn (available in support formation).</p>
+					<h5 class="mt-2"><b>Effect - Protection UP (5★ Awaken x1)</b></h5>
+					<p>When your troop contains 3 or more battle characters, increases protection gauge by 7% at the start of battle (available in support formation).</p>
 					
-					<h5 class="mt-2"><b>Effect - DEF UP (5★ Awaken x3)</b></h5>
-					<p class="mb-0">When affected by Pierce Resistance UP, increases own DEF by <span style="color:#03DD08">11%</span> at start of turn (available in support formation).</p>
+					<h5 class="mt-2"><b>Effect - Protection UP (5★ Awaken x3)</b></h5>
+					<p>When your troop contains 3 or more battle characters, increases protection gauge by 11% at the start of battle (available in support formation).</p>
 				</div>
 			</div>
 			<!-- Right Sidebar -->
@@ -122,11 +122,11 @@
 					<div class="list-group-item bg-dark">
 						<h2 class="whitetext border-bottom text-center pb-2" style="border-bottom-color: #1D2430; padding-bottom: 3px; margin-top: -5px;"><b>Town Traits</b></h2>
 						<div class="row m-0">
-							<div class="col-12 whitetext text-center mb-2 p-0"><b>Field</b></div>
-							<div class="col-6 text-center"><img src="../images/icons/field.png" loading="lazy"></div>
-							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="mt-2">+30%</h5></div>
 							<div class="col-12 whitetext text-center mb-2"><b>Digsite for Stamina Magistones</b></div>
-							<div class="col-6 text-center"><img src="../images/icons/digsite_for_stamina_magistones.png" loading="lazy"></div>
+							<div class="col-6 text-center"><img class="towntraits" src="../images/icons/digsite_for_stamina_magistones.png" loading="lazy"></div>
+							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="mt-2">+30%</h5></div>
+							<div class="col-12 whitetext text-center mb-2 p-0"><b>Training Ground</b></div>
+							<div class="col-6 text-center"><img class="towntraits" src="../images/icons/training_ground.png" loading="lazy"></div>
 							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="mt-2">+10%</h5></div>
 						</div>
 					</div>
