--- a/protectors/5star/the_talented_secretary_shion.html
+++ b/protectors/5star/the_talented_secretary_shion.html
@@ -7,11 +7,11 @@
 	<meta name="author" content="">
 	<title>[The Talented Secretary] Shion</title>
 	<!-- Favicons -->
-	<link href="../images/favicon.png" rel="icon">
+	<link href="../../images/favicon.png" rel="icon">
 	<!-- Bootstrap core CSS -->
-	<link href="../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link href="../../lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<!-- Custom styles for this template -->
-	<link href="../css/custom.css" rel="stylesheet">
+	<link href="../../css/custom.css" rel="stylesheet">
 </head>
 <body class="darktheme">
 	<!-- Navigation -->
@@ -22,7 +22,7 @@
 		<!-- Character Name & Icon -->
 		<div class="row">
 			<div class="mt-3 mb-3 titlebox col-lg-2 col-12 text-center">
-				<img src="../images/protectors/the_talented_secretary_shion/portrait.png" class="pr-lg-4 pl-lg-1 ml-lg-3 portrait" loading="lazy">
+				<img src="../../images/protectors/the_talented_secretary_shion/portrait.png" class="pr-lg-4 pl-lg-1 ml-lg-3 portrait" loading="lazy">
 			</div>
 			<div class="col-lg-6 my-auto text-center text-lg-left charname">
 				<h5 class="whitetext"><b>&#91;The Talented Secretary&#93;</b></h5><h5 class="whitetext"><b>Shion</b></h5>
@@ -38,10 +38,10 @@
 					<div class="list-group-item bg-dark">
 						<div class="row m-0">
 							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">Rarity</h5></div>
-							<div class="col-6 text-center"><img class="pt-1" src="../images/icons/5star.png" loading="lazy"></div>
+							<div class="col-6 text-center"><img class="pt-1" src="../../images/icons/5star.png" loading="lazy"></div>
 						</div>
 						<div class="row m-0 justify-content-center">
-							<div class="col-6 text-center mb-2"><img src="../images/icons/attribute_dark.png" loading="lazy"><img src="../images/icons/attribute_fire.png" loading="lazy"></div>
+							<div class="col-6 text-center mb-2"><img src="../../images/icons/attribute_dark.png" loading="lazy"><img src="../../images/icons/attribute_fire.png" loading="lazy"></div>
 						</div>
 						<div class="row m-0">
 							<div class="col-12 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">STATS (MAX)</h5></div>
@@ -69,12 +69,11 @@
 					<div class="pl-2 pl-lg-0" style="margin-top: 13px">
 						<div class="row m-0">
 							<div class="col-12 col-lg-3 text-center my-auto p-0">
-								<img src="../images/protectors/the_talented_secretary_shion/skill.png" class="charskill" loading="lazy">
+								<img src="../../images/protectors/the_talented_secretary_shion/skill.png" class="charskill" loading="lazy">
 							</div>
 							<div class="col-lg-9 my-auto px-lg-0 px-2">
 								<h5 class="mt-2"><b>Skill 1: Flawless Secretary</b></h5>
-								<p>Changes <a data-toggle="popover-hover" data-img="../images/icons/soul_of_skill.png"><span style="color:#1A9112">Soul of Skills</span></a> into <a data-toggle="popover-hover" data-img="../images/icons/soul_of_divine_protection.png"><span style="color:#3A8AFF">Soul of Divine Protection</span></a> 
-									.<br>Increases all allies' Secret Skill Gauge by <span style="color:#03DD08">15%</span>.</p>
+								<p>Changes <a data-toggle="popover-hover" data-img="../../images/icons/soul_of_skill.png"><span style="color:#1A9112">Soul of Skills</span></a> into <a data-toggle="popover-hover" data-img="../../images/icons/soul_of_divine_protection.png"><span style="color:#3A8AFF">Soul of Divine Protection</span></a>.<br>Increases all allies' Secret Skill Gauge by <span style="color:#03DD08">15%</span>.</p>
 								<p>Multiplier: <span style="color: #9C9C9C;">15/16/17</span><span style="color: #C6A656;">/17/18/19/</span><span style="color: #BC7BEF;">19/21/23/25%</span></p>
 							</div>
 						</div>
@@ -83,7 +82,7 @@
 				<h2 class="whitetext border-bottom pb-2" style="border-bottom-color: #1D2430;"><b>Divine Protection</b></h2>
 				<div class="row m-0 whitetext">
 					<div class="col-12 col-lg-3 text-center my-auto p-0">
-						<img src="../images/protectors/the_talented_secretary_shion/divine.png" class="charskill" loading="lazy">
+						<img src="../../images/protectors/the_talented_secretary_shion/divine.png" class="charskill" loading="lazy">
 					</div>
 					<div class="col-lg-9 my-auto px-lg-0 px-2">
 						<h5 class="mt-2"><b>Unconcealed Power</b></h5>
@@ -108,10 +107,10 @@
 						<h2 class="whitetext border-bottom text-center pb-2" style="border-bottom-color: #1D2430; padding-bottom: 3px; margin-top: -5px;"><b>Town Traits</b></h2>
 						<div class="row m-0">
 							<div class="col-12 whitetext text-center mb-2"><b>Digsite for Training Magistones</b></div>
-							<div class="col-6 text-center"><img class="towntraits" src="../images/icons/dark_magic_device.png" loading="lazy"></div>
+							<div class="col-6 text-center"><img class="towntraits" src="../../images/icons/dark_magic_device.png" loading="lazy"></div>
 							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="mt-2">+200%</h5></div>
 							<div class="col-12 whitetext text-center mb-2 p-0"><b>Digsite for Protection Magistones</b></div>
-							<div class="col-6 text-center"><img class="towntraits" src="../images/icons/fire_magic_device.png" loading="lazy"></div>
+							<div class="col-6 text-center"><img class="towntraits" src="../../images/icons/fire_magic_device.png" loading="lazy"></div>
 							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="mt-2">+100%</h5></div>
 						</div>
 					</div>
@@ -128,7 +127,7 @@
 	</footer>
 	<!-- Bootstrap core JavaScript -->
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-	<script src="../lib/bootstrap/js/bootstrap.min.js"></script>
+	<script src="../../lib/bootstrap/js/bootstrap.min.js"></script>
 	<script>
 		$('[data-toggle="popover-hover"]').popover({
 			html: true,
@@ -138,7 +137,7 @@
 		});
 	</script>
 	<script>
-		$.get("navigation.html", function(data){
+		$.get("../navigation.html", function(data){
 			$("#nav-placeholder").replaceWith(data);
 		});
 	</script>
