--- a/protectorunits.html
+++ b/protectorunits.html
@@ -115,7 +115,7 @@
 		<p class="m-0 text-center text-white">Isekai Memories Database is not affliated with or endorsed by Bandai Namco</a></p>
 	</footer>
 	<!-- Bootstrap core JavaScript -->
-	<script src="../lib/bootstrap/js/bootstrap.min.js"></script>
+	<script src="lib/bootstrap/js/bootstrap.min.js"></script>
 	<script>
 		$.get("navigation.html", function(data){
 			$("#nav-placeholder").replaceWith(data);
