--- a/protectorunits.html
+++ b/protectorunits.html
@@ -79,29 +79,14 @@
 						<th style="vertical-align: middle;">Name</th>
 						<th style="vertical-align: middle;">Attribute</th>
 						<th style="vertical-align: middle;">Rarity</th>
-						<th style="vertical-align: middle;">Attack Type</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
-						<td><a href="battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest"><img src="images/battleunits/harmonizer_of_monsters_and_humans_rimuru_tempest/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Harmonizer of Monsters and Humans Rimuru Tempest</a></td>
-						<td>Water</td>
+						<td><a href="protectors/5star/the_talented_secretary_shion.html"><img src="images/protectors/5star/the_talented_secretary_shion/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>[The Talented Secretary] Shion</a></td>
+						<td><img src="images/icons/attribute_dark.png"><img src="images/icons/attribute_fire.png"><br>Dark/Fire</td>
 						<td>5★</td>
-						<td>Magical</td>
 					</tr>
-					<tr>
-						<td><a href="battleunits/budding_of_deep_green_treyni"><img src="images/battleunits/budding_of_deep_green_treyni/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Budding of Deep Green Treyni</a></td>
-						<td>Earth</td>
-						<td>5★</td>
-						<td>Magical</td>
-					</tr>
-					<tr>
-						<td><a href="battleunits/conqueror_of_flames_shizue_izawa"><img src="images/battleunits/conqueror_of_flames_shizue_izawa/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>Conqueror of Flames Shizue Izawa</a></td>
-						<td>Fire</td>
-						<td>5★</td>
-						<td>Physical</td>
-					</tr>
-					
 				</tbody>
 			</table>
 			
