--- a/protectors/5star/the_talented_secretary_shion.html
+++ b/protectors/5star/the_talented_secretary_shion.html
@@ -22,7 +22,7 @@
 		<!-- Character Name & Icon -->
 		<div class="row">
 			<div class="mt-3 mb-3 titlebox col-lg-2 col-12 text-center">
-				<img src="../../images/protectors/the_talented_secretary_shion/portrait.png" class="pr-lg-4 pl-lg-1 ml-lg-3 portrait" loading="lazy">
+				<img src="../../images/protectors/5star/the_talented_secretary_shion/portrait.png" class="pr-lg-4 pl-lg-1 ml-lg-3 portrait" loading="lazy">
 			</div>
 			<div class="col-lg-6 my-auto text-center text-lg-left charname">
 				<h5 class="whitetext"><b>&#91;The Talented Secretary&#93;</b></h5><h5 class="whitetext"><b>Shion</b></h5>
@@ -69,10 +69,10 @@
 					<div class="pl-2 pl-lg-0" style="margin-top: 13px">
 						<div class="row m-0">
 							<div class="col-12 col-lg-3 text-center my-auto p-0">
-								<img src="../../images/protectors/the_talented_secretary_shion/skill.png" class="charskill" loading="lazy">
+								<img src="../../images/protectors/5star/the_talented_secretary_shion/skill.png" class="charskill" loading="lazy">
 							</div>
 							<div class="col-lg-9 my-auto px-lg-0 px-2">
-								<h5 class="mt-2"><b>Skill 1: Flawless Secretary</b></h5>
+								<h5 class="mt-2"><b>Flawless Secretary</b></h5>
 								<p>Changes <a data-toggle="popover-hover" data-img="../../images/icons/soul_of_skill.png"><span style="color:#1A9112">Soul of Skills</span></a> into <a data-toggle="popover-hover" data-img="../../images/icons/soul_of_divine_protection.png"><span style="color:#3A8AFF">Soul of Divine Protection</span></a>.<br>Increases all allies' Secret Skill Gauge by <span style="color:#03DD08">15%</span>.</p>
 								<p>Multiplier: <span style="color: #9C9C9C;">15/16/17</span><span style="color: #C6A656;">/17/18/19/</span><span style="color: #BC7BEF;">19/21/23/25%</span></p>
 							</div>
@@ -82,7 +82,7 @@
 				<h2 class="whitetext border-bottom pb-2" style="border-bottom-color: #1D2430;"><b>Divine Protection</b></h2>
 				<div class="row m-0 whitetext">
 					<div class="col-12 col-lg-3 text-center my-auto p-0">
-						<img src="../../images/protectors/the_talented_secretary_shion/divine.png" class="charskill" loading="lazy">
+						<img src="../../images/protectors/5star/the_talented_secretary_shion/divine.png" class="charskill" loading="lazy">
 					</div>
 					<div class="col-lg-9 my-auto px-lg-0 px-2">
 						<h5 class="mt-2"><b>Unconcealed Power</b></h5>
