all 5 star units

--- a/battleunits.html
+++ b/battleunits.html
@@ -84,6 +84,60 @@
 				</thead>
 				<tbody>
 					<tr>
+						<td><a href="battleunits/5star/dragonoid_milim_nava"><img src="images/battleunits/5star/dragonoid_milim_nava/portrait.png" style="width:50px; height:50px;" loading="lazy"><br> [Dragonoid] Milim Nava</a></td>
+						<td><img src="images/icons/attribute_wind.png"><br>Wind</td>
+						<td>5★</td>
+						<td>Magic</td>
+					</tr>
+					<tr>
+						<td><a href="battleunits/5star/king_of_an_armed_nation_gazel_dwargo"><img src="images/battleunits/5star/king_of_an_armed_nation_gazel_dwargo/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>[King of an Armed Nation] Gazel Dwargo</a></td>
+						<td><img src="images/icons/attribute_light.png"><br>Light</td>
+						<td>5★</td>
+						<td>Physical</td>
+					</tr>
+					<tr>
+						<td><a href="battleunits/5star/queen_of_yule_luminus_valentine"><img src="images/battleunits/5star/queen_of_yule_luminus_valentine/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>[Queen of Yule] Luminus Valentine</a></td>
+						<td><img src="images/icons/attribute_wind.png"><br>Wind</td>
+						<td>5★</td>
+						<td>Magic</td>
+					</tr>
+					<tr>
+						<td><a href="battleunits/5star/pink_ogre_of_heavenly_light_shuna"><img src="images/battleunits/5star/pink_ogre_of_heavenly_light_shuna/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>[Pink Ogre of Heavenly Light] Shuna</a></td>
+						<td><img src="images/icons/attribute_wind.png"><br>Wind</td>
+						<td>5★</td>
+						<td>Magic</td>
+					</tr>
+					<tr>
+						<td><a href="battleunits/5star/awakened_demon_lord_rimuru_tempest"><img src="images/battleunits/5star/awakened_demon_lord_rimuru_tempest/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>[Awakened Demon Lord] Rimuru Tempest</a></td>
+						<td><img src="images/icons/attribute_dark.png"><br>Dark</td>
+						<td>5★</td>
+						<td>Magic</td>
+					</tr>
+					<tr>
+						<td><a href="battleunits/4star/the_bold_servant_shion"><img src="images/battleunits/4star/the_bold_servant_shion/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>[The Bold Servant] Shion</a></td>
+						<td><img src="images/icons/attribute_wind.png"><br>Wind</td>
+						<td>4★</td>
+						<td>Physical</td>
+					</tr>
+					<tr>
+						<td><a href="battleunits/4star/crimson_ogre_warrior_benimaru"><img src="images/battleunits/4star/crimson_ogre_warrior_benimaru/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>[Crimson Ogre Warrior] Benimaru</a></td>
+						<td><img src="images/icons/attribute_dark.png"><br>Water</td>
+						<td>4★</td>
+						<td>Physical</td>
+					</tr>
+					<tr>
+						<td><a href="battleunits/5star/holy_princess_shuna"><img src="images/battleunits/5star/holy_princess_shuna/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>[Holy Princess] Shuna</a></td>
+						<td><img src="images/icons/attribute_light.png"><br>Water</td>
+						<td>5★</td>
+						<td>Magic</td>
+					</tr>
+					<tr>
+						<td><a href="battleunits/5star/spy_in_the_shadows_souei"><img src="images/battleunits/5star/spy_in_the_shadows_souei/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>[Spy in the Shadows] Souei</a></td>
+						<td><img src="images/icons/attribute_water.png"><br>Water</td>
+						<td>5★</td>
+						<td>Physical</td>
+					</tr>
+					<tr>
 						<td><a href="battleunits/5star/instructor_of_the_flashing_sword_hakurou"><img src="images/battleunits/5star/instructor_of_the_flashing_sword_hakurou/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>[Instructor of the Flashing Sword] Hakurou</a></td>
 						<td><img src="images/icons/attribute_wind.png"><br>Wind</td>
 						<td>5★</td>
