--- a/battleunits/5star/arch_golem_beretta.html
+++ b/battleunits/5star/arch_golem_beretta.html
@@ -40,7 +40,7 @@
 							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">Rarity</h5></div>
 							<div class="col-6 text-center"><img class="pt-1" src="../../images/icons/5star.png" loading="lazy"></div>
 							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">Growth</h5></div>
-							<div class="col-6 text-center whitetext"><h5 class="m-1">Balanced</h5></div>
+							<div class="col-6 text-center whitetext"><h5 class="m-1">Balance</h5></div>
 						</div>
 						<div class="row m-0 justify-content-center">
 							<div class="col-3 text-center mb-2"><img src="../../images/icons/attribute_dark.png" loading="lazy"></div>
@@ -77,7 +77,7 @@
 							</div>
 							<div class="col-lg-9 my-auto px-lg-0 px-2">
 								<h5 class="mt-2"><b>Skill 1: Search Change (35/30/25)</b></h5>
-								<p>Changes <a data-toggle="popover-hover" data-img="../../images/icons/soul_of_divine_protection.png"><span style="color:#3A8AFF">Soul of Divine Protection</span></a> x2 into <a data-toggle="popover-hover" data-img="../../images/icons/soul_of_secret.png"><span style="color:#D68A0A">Soul of Secret</span></a>.<br>Increases all <a data-toggle="popover-hover" data-img="../../images/icons/soul_of_secret.png"><span style="color:#D68A0A">Soul of Secret</span></a> gauges' increase by <span style="color:#03DD08">5%</span> (Turns: 1).</p>
+								<p>Changes <a data-toggle="popover-hover" data-img="../../../images/icons/soul_of_divine_protection.png"><span style="color:#3A8AFF">Soul of Divine Protection</span></a> x2 into <a data-toggle="popover-hover" data-img="../../../images/icons/soul_of_secret.png"><span style="color:#D68A0A">Soul of Secret</span></a>.<br>Increases all <a data-toggle="popover-hover" data-img="../../../images/icons/soul_of_secret.png"><span style="color:#D68A0A">Soul of Secret</span></a> gauges' increase by <span style="color:#03DD08">5%</span> (Turns: 1).</p>
 								<p>Multiplier: <span style="color: #9C9C9C;">5/5.5/6</span><span style="color: #C6A656;">/6/6.5/7/</span><span style="color: #BC7BEF;">7/8/9/10%</span></p>
 							</div>
 						</div>
