--- a/battleunits/5star/chancellor_of_tempest_rimuru_tempest.html
+++ b/battleunits/5star/chancellor_of_tempest_rimuru_tempest.html
@@ -40,7 +40,7 @@
 							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">Rarity</h5></div>
 							<div class="col-6 text-center"><img class="pt-1" src="../../images/icons/5star.png" loading="lazy"></div>
 							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">Growth</h5></div>
-							<div class="col-6 text-center whitetext"><h5 class="m-1">Balanced</h5></div>
+							<div class="col-6 text-center whitetext"><h5 class="m-1">Balance</h5></div>
 						</div>
 						<div class="row m-0 justify-content-center">
 							<div class="col-3 text-center mb-2"><img src="../../images/icons/attribute_space.png" loading="lazy"></div>
