--- a/battleunits/5star/harmonizer_of_monsters_and_humans_rimuru_tempest.html
+++ b/battleunits/5star/harmonizer_of_monsters_and_humans_rimuru_tempest.html
@@ -78,7 +78,7 @@
 							<div class="col-lg-9 my-auto px-lg-0 px-2">
 								<h5 class="mt-2"><b>Skill 1: Hydro Combat (50/45/40)</b></h5>
 								<p>Decreases a single target's Secret Skill Gauge by <span style="color:#03DD08">5%</span>.</p>
-								<p>Multiplier: <span style="color: #9C9C9C;">5/5.5/6</span><span style="color: #C6A656;">/7/7.5/8/</span><span style="color: #BC7BEF;">9/11/13/15</span>%</p>
+								<p>Multiplier: <span style="color: #9C9C9C;">5/5.5/6</span><span style="color: #C6A656;">/7/7.5/8/</span><span style="color: #BC7BEF;">9/11/13/15%</span></p>
 							</div>
 						</div>
 					</div>
@@ -89,8 +89,8 @@
 							</div>
 							<div class="col-lg-9 my-auto px-lg-0 px-2">
 								<h5 class="mt-2"><b>Skill 2: Heal Assist (40/35/30)</b></h5>
-								<p>Heals all allies' HP by <span style="color:#03DD08">15%</span>.<br>Increases <a data-toggle="popover-hover" data-img="../../images/icons/soul_of_divine_protection.png"><span style="color:#3A8AFF">Soul of Divine Protection</span></a> damage until the end of battle by <span style="color:#03DD08">5%</span> (Max: <span style="color:#03DD08">100%</span>).</p>
-								<p>Multiplier: <span style="color: #9C9C9C;">15/15.5/16</span><span style="color: #C6A656;">/16/16.5/17/</span><span style="color: #BC7BEF;">17/18/19/20</span>%</p>
+								<p>Heals all allies' HP by <span style="color:#03DD08">15%</span>.<br>Increases <a data-toggle="popover-hover" data-img="../../../images/icons/soul_of_divine_protection.png"><span style="color:#3A8AFF">Soul of Divine Protection</span></a> damage until the end of battle by <span style="color:#03DD08">5%</span> (Max: <span style="color:#03DD08">100%</span>).</p>
+								<p>Multiplier: <span style="color: #9C9C9C;">15/15.5/16</span><span style="color: #C6A656;">/16/16.5/17/</span><span style="color: #BC7BEF;">17/18/19/20%</span></p>
 							</div>
 						</div>
 					</div>
