--- a/battleunits/5star/samurai_general_of_hellfire_benimaru.html
+++ b/battleunits/5star/samurai_general_of_hellfire_benimaru.html
@@ -77,8 +77,8 @@
 							</div>
 							<div class="col-lg-9 my-auto px-lg-0 px-2">
 								<h5 class="mt-2"><b>Skill 1: Ogre Hero (25/20/15)</b></h5>
-								<p>Increases own ATK by <span style="color:#03DD08">25%</span> (Turns: 1).<br>Increases <a data-toggle="popover-hover" data-img="../../images/icons/soul_of_secret.png"><span style="color:#D68A0A">Soul of Secrets</span></a> damage by <span style="color:#03DD08">10%</span> (Turns: 1).</p>
-								<p>Multiplier: <span style="color: #9C9C9C;">25/25.5/26</span><span style="color: #C6A656;">/26/26.5/27/</span><span style="color: #BC7BEF;">27/28/29/30</span>%</p>
+								<p>Increases own ATK by <span style="color:#03DD08">25%</span> (Turns: 1).<br>Increases <a data-toggle="popover-hover" data-img="../../../images/icons/soul_of_secret.png"><span style="color:#D68A0A">Soul of Secrets</span></a> damage by <span style="color:#03DD08">10%</span> (Turns: 1).</p>
+								<p>Multiplier: <span style="color: #9C9C9C;">25/25.5/26</span><span style="color: #C6A656;">/26/26.5/27/</span><span style="color: #BC7BEF;">27/28/29/30%</span></p>
 							</div>
 						</div>
 					</div>
@@ -90,7 +90,7 @@
 							<div class="col-lg-9 my-auto px-lg-0 px-2">
 								<h5 class="mt-2"><b>Skill 2: War Hero (25/20/15)</b></h5>
 								<p>Decreases a single target's pierce power by <span style="color:#03DD08">10%</span> (Turns: 3).</p>
-								<p>Multiplier: <span style="color: #9C9C9C;">10/11/12</span><span style="color: #C6A656;">/12/13/14/</span><span style="color: #BC7BEF;">14/16/18/20</span>%</p>
+								<p>Multiplier: <span style="color: #9C9C9C;">10/11/12</span><span style="color: #C6A656;">/12/13/14/</span><span style="color: #BC7BEF;">14/16/18/20%</span></p>
 							</div>
 						</div>
 					</div>
