--- a/battleunits/5star/tempest_star_wolf_ranga.html
+++ b/battleunits/5star/tempest_star_wolf_ranga.html
@@ -77,7 +77,7 @@
 							</div>
 							<div class="col-lg-9 my-auto px-lg-0 px-2">
 								<h5 class="mt-2"><b>Skill 1: Pendulum Swing (35/30/25)</b></h5>
-								<p>Changes <a data-toggle="popover-hover" data-img="../../images/icons/soul_of_secret.png"><span style="color:#D68A0A">Soul of Secrets</span></a> x2 into <a data-toggle="popover-hover" data-img="../../images/icons/soul_of_skill.png"><span style="color:#1A9112">Soul of Skills</span></a>.<br>Increases <a data-toggle="popover-hover" data-img="../../images/icons/soul_of_skill.png"><span style="color:#1A9112">Soul of Skills</span></a> gauges' increase by <span style="color:#03DD08">5%</span> (Turns: 1).</p>
+								<p>Changes <a data-toggle="popover-hover" data-img="../../../images/icons/soul_of_secret.png"><span style="color:#D68A0A">Soul of Secrets</span></a> x2 into <a data-toggle="popover-hover" data-img="../../../images/icons/soul_of_skill.png"><span style="color:#1A9112">Soul of Skills</span></a>.<br>Increases <a data-toggle="popover-hover" data-img="../../../images/icons/soul_of_skill.png"><span style="color:#1A9112">Soul of Skills</span></a> gauges' increase by <span style="color:#03DD08">5%</span> (Turns: 1).</p>
 								<p>Multiplier: <span style="color: #9C9C9C;">5/5.5/6</span><span style="color: #C6A656;">/6/6.5/7/</span><span style="color: #BC7BEF;">7/8/9/10%</span></p>
 							</div>
 						</div>
