--- a/battleunits/5star/the_black_progenitor_diablo.html
+++ b/battleunits/5star/the_black_progenitor_diablo.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="[The Black Progenitor] Diablo Dark/Magic">
+	<meta name="description" content="[The Black Progenitor] Diablo Dark/Physical">
 	<meta name="author" content="">
 	<title>[The Black Progenitor] Diablo</title>
 	<!-- Favicons -->
@@ -40,7 +40,7 @@
 							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">Rarity</h5></div>
 							<div class="col-6 text-center"><img class="pt-1" src="../../images/icons/5star.png" loading="lazy"></div>
 							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">Growth</h5></div>
-							<div class="col-6 text-center whitetext"><h5 class="m-1">Blaanced</h5></div>
+							<div class="col-6 text-center whitetext"><h5 class="m-1">Balance</h5></div>
 						</div>
 						<div class="row m-0 justify-content-center">
 							<div class="col-3 text-center mb-2"><img src="../../images/icons/attribute_dark.png" loading="lazy"></div>
@@ -89,8 +89,8 @@
 							</div>
 							<div class="col-lg-9 my-auto px-lg-0 px-2">
 								<h5 class="mt-2"><b>Skill 2: Soul Manipulation (25/20/15)</b></h5>
-								<p>Changes <a data-toggle="popover-hover" data-img="../../images/icons/soul_of_skill.png"><span style="color:#1A9112">Soul of Skill</span></a> x1 into <a data-toggle="popover-hover" data-img="../../images/icons/soul_of_divine_protection.png"><span style="color:#3A8AFF">Soul of Divine Protection</span></a>.<br>Increases own critical rate by <span style="color:#03DD08">15%</span> (Turns: 1)</p>
-								<p>Multiplier: <span style="color: #9C9C9C;">5/5.5/6</span><span style="color: #C6A656;">/6/6.5/7/</span><span style="color: #BC7BEF;">7/8/9/10</span>%</p>
+								<p>Changes <a data-toggle="popover-hover" data-img="../../../images/icons/soul_of_skill.png"><span style="color:#1A9112">Soul of Skill</span></a> x1 into <a data-toggle="popover-hover" data-img="../../../images/icons/soul_of_divine_protection.png"><span style="color:#3A8AFF">Soul of Divine Protection</span></a>.<br>Increases own critical rate by <span style="color:#03DD08">15%</span> (Turns: 1).</p>
+								<p>Multiplier: <span style="color: #9C9C9C;">5/5.5/6</span><span style="color: #C6A656;">/6/6.5/7/</span><span style="color: #BC7BEF;">7/8/9/10%</span></p>
 							</div>
 						</div>
 					</div>
