--- a/protectors/5star/the_talented_secretary_shion.html
+++ b/protectors/5star/the_talented_secretary_shion.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="[The Talented Secretary] Shion Dark/Magic">
+	<meta name="description" content="[The Talented Secretary] Shion Dark/Fire">
 	<meta name="author" content="">
 	<title>[The Talented Secretary] Shion</title>
 	<!-- Favicons -->
@@ -39,6 +39,8 @@
 						<div class="row m-0">
 							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">Rarity</h5></div>
 							<div class="col-6 text-center"><img class="pt-1" src="../../images/icons/5star.png" loading="lazy"></div>
+							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="m-1">Growth</h5></div>
+							<div class="col-6 text-center whitetext"><h5 class="m-1">Attack</h5></div>
 						</div>
 						<div class="row m-0 justify-content-center">
 							<div class="col-6 text-center mb-2"><img src="../../images/icons/attribute_dark.png" loading="lazy"><img src="../../images/icons/attribute_fire.png" loading="lazy"></div>
@@ -73,7 +75,7 @@
 							</div>
 							<div class="col-lg-9 my-auto px-lg-0 px-2">
 								<h5 class="mt-2"><b>Flawless Secretary</b></h5>
-								<p>Changes <a data-toggle="popover-hover" data-img="../../images/icons/soul_of_skill.png"><span style="color:#1A9112">Soul of Skills</span></a> into <a data-toggle="popover-hover" data-img="../../images/icons/soul_of_divine_protection.png"><span style="color:#3A8AFF">Soul of Divine Protection</span></a>.<br>Increases all allies' Secret Skill Gauge by <span style="color:#03DD08">15%</span>.</p>
+								<p>Changes <a data-toggle="popover-hover" data-img="../../../images/icons/soul_of_skill.png"><span style="color:#1A9112">Soul of Skills</span></a> into <a data-toggle="popover-hover" data-img="../../../images/icons/soul_of_divine_protection.png"><span style="color:#3A8AFF">Soul of Divine Protection</span></a>.<br>Increases all allies' Secret Skill Gauge by <span style="color:#03DD08">15%</span>.</p>
 								<p>Multiplier: <span style="color: #9C9C9C;">15/16/17</span><span style="color: #C6A656;">/17/18/19/</span><span style="color: #BC7BEF;">19/21/23/25%</span></p>
 							</div>
 						</div>
@@ -106,10 +108,10 @@
 					<div class="list-group-item bg-dark">
 						<h2 class="whitetext border-bottom text-center pb-2" style="border-bottom-color: #1D2430; padding-bottom: 3px; margin-top: -5px;"><b>Town Traits</b></h2>
 						<div class="row m-0">
-							<div class="col-12 whitetext text-center mb-2"><b>Digsite for Training Magistones</b></div>
+							<div class="col-12 whitetext text-center mb-2"><b>Dark Magic Device</b></div>
 							<div class="col-6 text-center"><img class="towntraits" src="../../images/icons/dark_magic_device.png" loading="lazy"></div>
 							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="mt-2">+200%</h5></div>
-							<div class="col-12 whitetext text-center mb-2 p-0"><b>Digsite for Protection Magistones</b></div>
+							<div class="col-12 whitetext text-center mb-2 p-0"><b>Fire Magic Device</b></div>
 							<div class="col-6 text-center"><img class="towntraits" src="../../images/icons/fire_magic_device.png" loading="lazy"></div>
 							<div class="col-6 whitetext mb-2 text-center" style="background-color: #2D323C"><h5 class="mt-2">+100%</h5></div>
 						</div>
