--- a/battleunits/5star/seal_releaser_veldora_tempest.html
+++ b/battleunits/5star/seal_releaser_veldora_tempest.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="[Seal Releaser Veldora Tempest] Veldora Tempest Dark/Magic">
+	<meta name="description" content="[Seal Releaser Veldora Tempest] Veldora Tempest Dark/Physic">
 	<meta name="author" content="">
 	<title>[Seal Releaser Veldora Tempest] Veldora Tempest</title>
 	<!-- Favicons -->
