--- a/protectorunits.html
+++ b/protectorunits.html
@@ -83,6 +83,11 @@
 				</thead>
 				<tbody>
 					<tr>
+						<td><a href="protectors/5star/the_faithful_housemaid_shuna.html"><img src="images/protectors/5star/the_faithful_housemaid_shuna/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>[The Faithful Housemaid] Shuna</a></td>
+						<td><img src="images/icons/attribute_wind.png"><img src="images/icons/attribute_water.png"><br>Wind/Water</td>
+						<td>5★</td>
+					</tr>
+					<tr>
 						<td><a href="protectors/5star/the_talented_secretary_shion.html"><img src="images/protectors/5star/the_talented_secretary_shion/portrait.png" style="width:50px; height:50px;" loading="lazy"><br>[The Talented Secretary] Shion</a></td>
 						<td><img src="images/icons/attribute_dark.png"><img src="images/icons/attribute_fire.png"><br>Dark/Fire</td>
 						<td>5★</td>
