--- a/index.html
+++ b/index.html
@@ -27,19 +27,18 @@
 			<div class="container">
 				<div class="jumbotron bg-dark whitetext" style="padding: 1rem 1rem">
 					<h2 style="text-align: center;">Welcome to Isekai Memories Database!</h2>
+					<p class="mb-0" style="text-align: center;">IM Database Provides you with the latest information on Tensura: Isekai Memories.</p>
+				</div>
+				<div class="jumbotron bg-dark whitetext" style="padding: 1rem 1rem">
+					<h2 style="text-align: center;">New Characters</h2>
 					<div class="d-flex justify-content-center">
-						<p style="text-align: center;">Follow the Twitter account <a href="https://twitter.com/isekaimemo_db"><span style="color:#ffa500">@isekaimemo_db</span></a> for site announcement and game updates.</p>
+						<a class="character-list-item" href="battleunits/5star/queen_of_yule_luminus_valentine"><img src="images/battleunits/5star/queen_of_yule_luminus_valentine/portrait.png" class="m-3 portrait" loading="lazy"></a>
+						<a class="character-list-item" href="protectors/5star/the_faithful_housemaid_shuna"><img src="images/protectors/5star/the_faithful_housemaid_shuna/portrait.png" class="m-3 portrait" loading="lazy"></a>
+						<a class="character-list-item" href="battleunits/4star/the_bold_servant_shion"><img src="images/battleunits/4star/the_bold_servant_shion/portrait.png" class="m-3 portrait" loading="lazy"></a>
 					</div>
 				</div>
 				<!--
-				<div class="jumbotron greytheme whitetext" style="padding: 1rem 1rem">
-					<h2 style="text-align: center;">New Characters</h2>
-					<div class="d-flex justify-content-center">
-						<a class="character-list-item" href="characters/protective_heart_diane/1"><img src="images/characters/protective_heart_diane/ssrg_portrait.png" class="m-3" loading="lazy"></a>
-						<a class="character-list-item" href="characters/slater/3"><img src="images/characters/slater/ssrr_portrait.png" class="m-3" loading="lazy"></a>
-					</div>
-				</div>
-
+			
 				<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 			-->
 			<!-- Banner Section -->
@@ -65,9 +64,9 @@
 			<div class="row">
 				<div class="col-lg-6 mb-6 mb-3">
 					<div class="card greytheme">
-						<a href="https://twitter.com/isekaimemo_db" target=_blank>
+						<a href="https://twitter.com/tensura_m_game" target=_blank>
 							<div>
-								<img src="images/officialsite.png" class="card-img" style="max-width: 100%; max-height: 100%; margin: auto; display: block;" loading="lazy" loading="lazy"></img>
+								<img src="images/officialjptwitter.png" class="card-img" style="max-width: 100%; max-height: 100%; margin: auto; display: block;" loading="lazy" loading="lazy"></img>
 							</div>
 						</a>
 					</div>
@@ -76,7 +75,7 @@
 					<div class="card greytheme">
 						<a href="https://www.facebook.com/slime.isekaimemories" target=_blank>
 							<div>
-								<img src="images/officialsite.png" class="card-img" style="max-width: 100%; max-height: 100%; margin: auto; display: block;" loading="lazy" loading="lazy"></img>
+								<img src="images/officialfb.png" class="card-img" style="max-width: 100%; max-height: 100%; margin: auto; display: block;" loading="lazy" loading="lazy"></img>
 							</div>
 						</a>
 					</div>
